# tripcart

./: .env.example  .gitattributes  .gitignore  .impeccable.md  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  PHASE_0_CHECKLIST.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.json
.claude/agents/: tripcart-api-reviewer.md  tripcart-expo-reviewer.md  tripcart-schema-guardian.md
.claude/commands/: analyze.md  context.md  exec-plan.md  review.md
.github/workflows/: ci.yml
.gstack/qa-reports/: qa-report-tripcart-local-2026-04-30.md
apps/mobile/: app.json  eslint.config.mjs  package.json
apps/mobile/app/: _layout.tsx
apps/mobile/types/: assets.d.ts
apps/web/: eslint.config.js  next.config.ts  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json  vitest.config.ts
apps/web/e2e/: guest-first.spec.ts
apps/web/src/: middleware.ts  proxy.ts
apps/web/src/app/: page.tsx  (+2 more)
docs/: 00_READ_THIS_FIRST.md  API_CONTRACT_v0.2.md  ARCHITECTURE.md  DESIGN_SYSTEM.md  DEVELOPMENT_OPERATING_SYSTEM.md  EXECUTION_PROTOCOL.md  GOVERNANCE.md  PRODUCT_MASTER_PLAN.md  ROADMAP.md  SECURITY.md  TEST_STRATEGY.md  tripcart-design-tokens.final.ts  tripcart_schema_canonical_v0.3.sql  tripcart_schema_v0.2_hardening_patch.sql
docs/evals/: TASK_LEDGER.md
infra/supabase/: README.md  config.toml
infra/supabase/migrations/: 20260326000001_reorder_stops_rpc.sql  (+3 more)
services/optimizer/: auth.py  main.py  pyproject.toml
services/optimizer/routers/: matrix.py  optimize.py
services/optimizer/tests/: test_health.py
todo/: PHASE_0_CHECKLIST.md
(+79 files in other folders)
