[project]
name = "tripcart-optimizer"
version = "0.0.0"
description = "TripCart Optimizer — FastAPI + OR-Tools time-window routing service"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "ortools>=9.12.0",
    "pydantic>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",  # FastAPI TestClient
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
